# dual_autodiff

./: .gitignore  LICENSE  README.md  dual_autodiff.ipynb  pyproject.toml  setup.py
Docker_testing/: Dockerfile  README.md
Docker_testing/wheels/: dual_autodiff-0.1.0-py3-none-any.whl  dual_autodiff_x-0.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
cython_package/: README.md
cython_package/dual_autodiff_x/: tools.pyx
cython_package/wheelhouse/: dual_autodiff_x-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
cython_package/wheelhouse/wheel_contents/dual_autodiff_x-0.1.0.dist-info/: METADATA  RECORD
docs/source/: implementation.rst  index.rst
docs/source/demos/: dual_autodiff.ipynb  dual_autodiff_analysis.ipynb  dual_autodiff_demo.ipynb
dual_autodiff/: __init__.py  dual.py  tools.py
dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt
dual_autodiff_x/: dual.pyx
python_package/: README.md  pyproject.toml  setup.py
python_package/docs/source/: conf.py  implementation.rst  index.rst
python_package/docs/source/demos/: dual_autodiff_analysis.ipynb  dual_autodiff_demo.ipynb
python_package/dual_autodiff/: dual.py
python_package/tests/: test_dual.py
requirements/: requirements.txt  requirements_dev.txt  requirements_full.txt
tests/: test_dual.py  test_tools.py
