[project]
name = "dual_autodiff"
version = "0.1.0"
description = "Dual_autodiff package"
authors = [
    {name = "Elizabeth S.Z. Tan", email = "eszt2@cam.ac.uk"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
keywords = ["dual autodiff"]

dependencies = ["numpy>=1.18.0", "matplotlib>=3.0.0"]